Endpoints de listado de equipos y validaciones en registro de equipos
Se agregan el endpoint de listar los equipos registrados, y se modifica el modelo para agregar validaciones al momento de registrar el equipo.
