# backend/src/main/java/com/spme/maintenance/domain/model/Measurement.java
@@ -1,6 +1,8 @@
 package com.spme.maintenance.domain.model;
 
 import java.time.LocalDateTime;
+import javax.validation.constraints.NotBlank;
+import com.spme.maintenance.domain.validation.ExistingEquipment;
 
 import com.amazonaws.services.dynamodbv2.datamodeling.*;
 import org.springframework.data.annotation.Id;
@@ -11,8 +13,11 @@ import lombok.Data;
 public class Measurement {
     @Id
     @DynamoDBHashKey
+    @DynamoDBAutoGeneratedKey
     private String id;
 
+    @NotBlank(message = "El ID del equipo es obligatorio")
+    @ExistingEquipment(message = "El ID del equipo debe existir en la tabla Equipment")
     @DynamoDBAttribute
     private String equipmentId;
 
